# OptiExtract_task

./: .gitignore  DOCUMENTATION.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: Silk.jsx
